tests/paczka1/small_fuzzy/48720718.err
Error in line 4: kfDUKG A264 3Î1,8
Error in line 3: kfDUKG A264 81,0
